fix eye style for dark mode

--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,18 @@ input[type="range"]::-webkit-slider-thumb {
         height: 5vw;
     }
 
+    .eye_dark {
+        margin-top: -15px;
+        margin-bottom: 10px;
+        width: 8vw;
+        height: 8vw;
+        border: 4px solid #1E1E1E;
+        border-radius: 50%;
+        border-top-color: transparent ;
+        border-left-color: transparent;
+        border-right-color: transparent;
+    }
+
     .smile {
         width: 10vw;
         height: 10vw;
@@ -239,6 +251,18 @@ input[type="range"]::-webkit-slider-thumb {
         height: 4vw;
     }
 
+    .eye_dark {
+        margin-top: -15px;
+        margin-bottom: 10px;
+        width: 6vw;
+        height: 6vw;
+        border: 6px solid #1E1E1E;
+        border-radius: 50%;
+        border-top-color: transparent ;
+        border-left-color: transparent;
+        border-right-color: transparent;
+    }
+
     .smile {
         width: 8vw;
         height: 8vw;
@@ -317,6 +341,17 @@ input[type="range"]::-webkit-slider-thumb {
     .eye {
         width: 2vw;
         height: 2vw;
+    }*/
+
+    .eye_dark {
+        margin-bottom: 10px;
+        width: 3vw;
+        height: 3vw;
+        border: 5px solid #1E1E1E;
+        border-radius: 50%;
+        border-top-color: transparent ;
+        border-left-color: transparent;
+        border-right-color: transparent;
     }
 
     .smile {
@@ -398,6 +433,17 @@ input[type="range"]::-webkit-slider-thumb {
         height: 1.5vw;
     }
 
+    .eye_dark {
+        margin-bottom: 10px;
+        width: 2.5vw;
+        height: 2.5vw;
+        border: 7px solid #1E1E1E;
+        border-radius: 50%;
+        border-top-color: transparent ;
+        border-left-color: transparent;
+        border-right-color: transparent;
+    }
+
     .smile {
         width: 3vw;
         height: 3vw;
@@ -455,14 +501,8 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .grid_dark {
-    /* need to add glow effect*/
     background-color: #AFA6E8;
-}
-
-.eye_dark {
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
+    box-shadow: 0 0 50px 15px #AFA6E8;
 }
 
 .button_dark {
